# rocket-backend-ex

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/routes/: books.rs
