[package]
name = "backend"
version = "0.1.0"
authors = ["spyrr <spyrr83@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3.15"
bson = "1.2.2"
nanoid = "0.4.0"

[dependencies.mongodb]
version = "2.0.0-beta.2"
default-features = false
features = ["async-std-runtime"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]